app/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from app/Parser.y
-----------------------------------------------------------------------------

state 7 contains 4 reduce/reduce conflicts.
state 8 contains 1 shift/reduce conflicts and 4 reduce/reduce conflicts.
state 9 contains 1 shift/reduce conflicts and 4 reduce/reduce conflicts.
state 11 contains 3 shift/reduce conflicts.
state 14 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_happyParseTokens -> Program                 (0)
	Program -> Objectives                              (1)
	Objectives -> Objective                            (2)
	Objectives -> Objectives newLine Objective         (3)
	Objectives -> Objectives newLine                   (4)
	Objective -> grabless Chapter                      (5)
	Objective -> num Collectable                       (6)
	Objective -> Chapter                               (7)
	Objective -> Chapter Collectable                   (8)
	Objective -> Words                                 (9)
	Chapter -> chapter                                 (10)
	Chapter -> chapterName bside                       (11)
	Chapter -> chapterName                             (12)
	Chapter -> reflection bside                        (13)
	Chapter -> reflection                              (14)
	Collectable -> cassette                            (15)
	Collectable -> blueheart                           (16)
	Words -> Word                                      (17)
	Words -> Words Word                                (18)
	Word -> chapter                                    (19)
	Word -> grabless                                   (20)
	Word -> cassette                                   (21)
	Word -> blueheart                                  (22)
	Word -> chapterName                                (23)
	Word -> reflection                                 (24)
	Word -> bside                                      (25)
	Word -> num                                        (26)
	Word -> text                                       (27)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	newLine        { TNewLine }
	chapter        { TChapter $$ }
	chapterName    { TChapterName $$ }
	reflection     { TReflection }
	bside          { TBSide }
	grabless       { TGrabless }
	cassette       { TCassette }
	blueheart      { TBlueHeart }
	num            { TInt $$ }
	text           { TString $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_happyParseTokens rule  0
	Program         rule  1
	Objectives      rules 2, 3, 4
	Objective       rules 5, 6, 7, 8, 9
	Chapter         rules 10, 11, 12, 13, 14
	Collectable     rules 15, 16
	Words           rules 17, 18
	Word            rules 19, 20, 21, 22, 23, 24, 25, 26, 27

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_happyParseTokens -> . Program                (rule 0)

	chapter        shift, and enter state 7
	chapterName    shift, and enter state 8
	reflection     shift, and enter state 9
	bside          shift, and enter state 10
	grabless       shift, and enter state 11
	cassette       shift, and enter state 12
	blueheart      shift, and enter state 13
	num            shift, and enter state 14
	text           shift, and enter state 15

	Program        goto state 16
	Objectives     goto state 2
	Objective      goto state 3
	Chapter        goto state 4
	Words          goto state 5
	Word           goto state 6

State 1

	Program -> . Objectives                             (rule 1)

	chapter        shift, and enter state 7
	chapterName    shift, and enter state 8
	reflection     shift, and enter state 9
	bside          shift, and enter state 10
	grabless       shift, and enter state 11
	cassette       shift, and enter state 12
	blueheart      shift, and enter state 13
	num            shift, and enter state 14
	text           shift, and enter state 15

	Objectives     goto state 2
	Objective      goto state 3
	Chapter        goto state 4
	Words          goto state 5
	Word           goto state 6

State 2

	Program -> Objectives .                             (rule 1)
	Objectives -> Objectives . newLine Objective        (rule 3)
	Objectives -> Objectives . newLine                  (rule 4)

	newLine        shift, and enter state 33
	%eof           reduce using rule 1


State 3

	Objectives -> Objective .                           (rule 2)

	newLine        reduce using rule 2
	%eof           reduce using rule 2


State 4

	Objective -> Chapter .                              (rule 7)
	Objective -> Chapter . Collectable                  (rule 8)

	newLine        reduce using rule 7
	cassette       shift, and enter state 18
	blueheart      shift, and enter state 19
	%eof           reduce using rule 7

	Collectable    goto state 32

State 5

	Objective -> Words .                                (rule 9)
	Words -> Words . Word                               (rule 18)

	newLine        reduce using rule 9
	chapter        shift, and enter state 27
	chapterName    shift, and enter state 28
	reflection     shift, and enter state 29
	bside          shift, and enter state 10
	grabless       shift, and enter state 30
	cassette       shift, and enter state 12
	blueheart      shift, and enter state 13
	num            shift, and enter state 31
	text           shift, and enter state 15
	%eof           reduce using rule 9

	Word           goto state 26

State 6

	Words -> Word .                                     (rule 17)

	newLine        reduce using rule 17
	chapter        reduce using rule 17
	chapterName    reduce using rule 17
	reflection     reduce using rule 17
	bside          reduce using rule 17
	grabless       reduce using rule 17
	cassette       reduce using rule 17
	blueheart      reduce using rule 17
	num            reduce using rule 17
	text           reduce using rule 17
	%eof           reduce using rule 17


State 7

	Chapter -> chapter .                                (rule 10)
	Word -> chapter .                                   (rule 19)

	newLine        reduce using rule 19
			(reduce using rule 10)

	chapter        reduce using rule 19
	chapterName    reduce using rule 19
	reflection     reduce using rule 19
	bside          reduce using rule 19
	grabless       reduce using rule 19
	cassette       reduce using rule 19
			(reduce using rule 10)

	blueheart      reduce using rule 19
			(reduce using rule 10)

	num            reduce using rule 19
	text           reduce using rule 19
	%eof           reduce using rule 19
			(reduce using rule 10)



State 8

	Chapter -> chapterName . bside                      (rule 11)
	Chapter -> chapterName .                            (rule 12)
	Word -> chapterName .                               (rule 23)

	newLine        reduce using rule 23
			(reduce using rule 12)

	chapter        reduce using rule 23
	chapterName    reduce using rule 23
	reflection     reduce using rule 23
	bside          shift, and enter state 25
			(reduce using rule 23)

	grabless       reduce using rule 23
	cassette       reduce using rule 23
			(reduce using rule 12)

	blueheart      reduce using rule 23
			(reduce using rule 12)

	num            reduce using rule 23
	text           reduce using rule 23
	%eof           reduce using rule 23
			(reduce using rule 12)



State 9

	Chapter -> reflection . bside                       (rule 13)
	Chapter -> reflection .                             (rule 14)
	Word -> reflection .                                (rule 24)

	newLine        reduce using rule 24
			(reduce using rule 14)

	chapter        reduce using rule 24
	chapterName    reduce using rule 24
	reflection     reduce using rule 24
	bside          shift, and enter state 24
			(reduce using rule 24)

	grabless       reduce using rule 24
	cassette       reduce using rule 24
			(reduce using rule 14)

	blueheart      reduce using rule 24
			(reduce using rule 14)

	num            reduce using rule 24
	text           reduce using rule 24
	%eof           reduce using rule 24
			(reduce using rule 14)



State 10

	Word -> bside .                                     (rule 25)

	newLine        reduce using rule 25
	chapter        reduce using rule 25
	chapterName    reduce using rule 25
	reflection     reduce using rule 25
	bside          reduce using rule 25
	grabless       reduce using rule 25
	cassette       reduce using rule 25
	blueheart      reduce using rule 25
	num            reduce using rule 25
	text           reduce using rule 25
	%eof           reduce using rule 25


State 11

	Objective -> grabless . Chapter                     (rule 5)
	Word -> grabless .                                  (rule 20)

	newLine        reduce using rule 20
	chapter        shift, and enter state 21
			(reduce using rule 20)

	chapterName    shift, and enter state 22
			(reduce using rule 20)

	reflection     shift, and enter state 23
			(reduce using rule 20)

	bside          reduce using rule 20
	grabless       reduce using rule 20
	cassette       reduce using rule 20
	blueheart      reduce using rule 20
	num            reduce using rule 20
	text           reduce using rule 20
	%eof           reduce using rule 20

	Chapter        goto state 20

State 12

	Word -> cassette .                                  (rule 21)

	newLine        reduce using rule 21
	chapter        reduce using rule 21
	chapterName    reduce using rule 21
	reflection     reduce using rule 21
	bside          reduce using rule 21
	grabless       reduce using rule 21
	cassette       reduce using rule 21
	blueheart      reduce using rule 21
	num            reduce using rule 21
	text           reduce using rule 21
	%eof           reduce using rule 21


State 13

	Word -> blueheart .                                 (rule 22)

	newLine        reduce using rule 22
	chapter        reduce using rule 22
	chapterName    reduce using rule 22
	reflection     reduce using rule 22
	bside          reduce using rule 22
	grabless       reduce using rule 22
	cassette       reduce using rule 22
	blueheart      reduce using rule 22
	num            reduce using rule 22
	text           reduce using rule 22
	%eof           reduce using rule 22


State 14

	Objective -> num . Collectable                      (rule 6)
	Word -> num .                                       (rule 26)

	newLine        reduce using rule 26
	chapter        reduce using rule 26
	chapterName    reduce using rule 26
	reflection     reduce using rule 26
	bside          reduce using rule 26
	grabless       reduce using rule 26
	cassette       shift, and enter state 18
			(reduce using rule 26)

	blueheart      shift, and enter state 19
			(reduce using rule 26)

	num            reduce using rule 26
	text           reduce using rule 26
	%eof           reduce using rule 26

	Collectable    goto state 17

State 15

	Word -> text .                                      (rule 27)

	newLine        reduce using rule 27
	chapter        reduce using rule 27
	chapterName    reduce using rule 27
	reflection     reduce using rule 27
	bside          reduce using rule 27
	grabless       reduce using rule 27
	cassette       reduce using rule 27
	blueheart      reduce using rule 27
	num            reduce using rule 27
	text           reduce using rule 27
	%eof           reduce using rule 27


State 16

	%start_happyParseTokens -> Program .                (rule 0)

	%eof           accept


State 17

	Objective -> num Collectable .                      (rule 6)

	newLine        reduce using rule 6
	%eof           reduce using rule 6


State 18

	Collectable -> cassette .                           (rule 15)

	newLine        reduce using rule 15
	%eof           reduce using rule 15


State 19

	Collectable -> blueheart .                          (rule 16)

	newLine        reduce using rule 16
	%eof           reduce using rule 16


State 20

	Objective -> grabless Chapter .                     (rule 5)

	newLine        reduce using rule 5
	%eof           reduce using rule 5


State 21

	Chapter -> chapter .                                (rule 10)

	newLine        reduce using rule 10
	%eof           reduce using rule 10


State 22

	Chapter -> chapterName . bside                      (rule 11)
	Chapter -> chapterName .                            (rule 12)

	newLine        reduce using rule 12
	bside          shift, and enter state 25
	%eof           reduce using rule 12


State 23

	Chapter -> reflection . bside                       (rule 13)
	Chapter -> reflection .                             (rule 14)

	newLine        reduce using rule 14
	bside          shift, and enter state 24
	%eof           reduce using rule 14


State 24

	Chapter -> reflection bside .                       (rule 13)

	newLine        reduce using rule 13
	cassette       reduce using rule 13
	blueheart      reduce using rule 13
	%eof           reduce using rule 13


State 25

	Chapter -> chapterName bside .                      (rule 11)

	newLine        reduce using rule 11
	cassette       reduce using rule 11
	blueheart      reduce using rule 11
	%eof           reduce using rule 11


State 26

	Words -> Words Word .                               (rule 18)

	newLine        reduce using rule 18
	chapter        reduce using rule 18
	chapterName    reduce using rule 18
	reflection     reduce using rule 18
	bside          reduce using rule 18
	grabless       reduce using rule 18
	cassette       reduce using rule 18
	blueheart      reduce using rule 18
	num            reduce using rule 18
	text           reduce using rule 18
	%eof           reduce using rule 18


State 27

	Word -> chapter .                                   (rule 19)

	newLine        reduce using rule 19
	chapter        reduce using rule 19
	chapterName    reduce using rule 19
	reflection     reduce using rule 19
	bside          reduce using rule 19
	grabless       reduce using rule 19
	cassette       reduce using rule 19
	blueheart      reduce using rule 19
	num            reduce using rule 19
	text           reduce using rule 19
	%eof           reduce using rule 19


State 28

	Word -> chapterName .                               (rule 23)

	newLine        reduce using rule 23
	chapter        reduce using rule 23
	chapterName    reduce using rule 23
	reflection     reduce using rule 23
	bside          reduce using rule 23
	grabless       reduce using rule 23
	cassette       reduce using rule 23
	blueheart      reduce using rule 23
	num            reduce using rule 23
	text           reduce using rule 23
	%eof           reduce using rule 23


State 29

	Word -> reflection .                                (rule 24)

	newLine        reduce using rule 24
	chapter        reduce using rule 24
	chapterName    reduce using rule 24
	reflection     reduce using rule 24
	bside          reduce using rule 24
	grabless       reduce using rule 24
	cassette       reduce using rule 24
	blueheart      reduce using rule 24
	num            reduce using rule 24
	text           reduce using rule 24
	%eof           reduce using rule 24


State 30

	Word -> grabless .                                  (rule 20)

	newLine        reduce using rule 20
	chapter        reduce using rule 20
	chapterName    reduce using rule 20
	reflection     reduce using rule 20
	bside          reduce using rule 20
	grabless       reduce using rule 20
	cassette       reduce using rule 20
	blueheart      reduce using rule 20
	num            reduce using rule 20
	text           reduce using rule 20
	%eof           reduce using rule 20


State 31

	Word -> num .                                       (rule 26)

	newLine        reduce using rule 26
	chapter        reduce using rule 26
	chapterName    reduce using rule 26
	reflection     reduce using rule 26
	bside          reduce using rule 26
	grabless       reduce using rule 26
	cassette       reduce using rule 26
	blueheart      reduce using rule 26
	num            reduce using rule 26
	text           reduce using rule 26
	%eof           reduce using rule 26


State 32

	Objective -> Chapter Collectable .                  (rule 8)

	newLine        reduce using rule 8
	%eof           reduce using rule 8


State 33

	Objectives -> Objectives newLine . Objective        (rule 3)
	Objectives -> Objectives newLine .                  (rule 4)

	newLine        reduce using rule 4
	chapter        shift, and enter state 7
	chapterName    shift, and enter state 8
	reflection     shift, and enter state 9
	bside          shift, and enter state 10
	grabless       shift, and enter state 11
	cassette       shift, and enter state 12
	blueheart      shift, and enter state 13
	num            shift, and enter state 14
	text           shift, and enter state 15
	%eof           reduce using rule 4

	Objective      goto state 34
	Chapter        goto state 4
	Words          goto state 5
	Word           goto state 6

State 34

	Objectives -> Objectives newLine Objective .        (rule 3)

	newLine        reduce using rule 3
	%eof           reduce using rule 3


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 28
Number of terminals: 10
Number of non-terminals: 8
Number of states: 35
